# CQUPT_Block_Storage

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CQUPT_Block_Storage.cpp  vcpkg.json
cross-platform-raft/: CMakeLists.txt  CMakePresets.json  README.md
cross-platform-raft/cmake/: CompilerOptions.cmake  Dependencies.cmake  PlatformOptions.cmake
cross-platform-raft/config/: node-1.json  node-2.json  node-3.json  node-4.json
cross-platform-raft/proto/: CMakeLists.txt  common.proto  metadata.proto  raft.proto  store.proto
cross-platform-raft/src/common/: CMakeLists.txt  bounded_queue.cpp  bounded_queue.h  checksum.cpp  checksum.h  status.cpp  status.h  types.h
cross-platform-raft/src/config/: CMakeLists.txt  config.cpp  config.h  config_loader.cpp  config_loader.h
cross-platform-raft/src/metadata/: CMakeLists.txt  metadata_command.cpp  metadata_command.h  metadata_service.cpp  metadata_service.h  metadata_state_machine.cpp  metadata_state_machine.h  state_machine.h
cross-platform-raft/src/platform/: CMakeLists.txt  file_ops.cpp  file_ops.h  process_ops.cpp  process_ops.h  time_ops.cpp  time_ops.h
cross-platform-raft/src/raft/: CMakeLists.txt  file_raft_storage.cpp  file_raft_storage.h  memory_raft_storage.cpp  memory_raft_storage.h  raft_core.cpp  raft_core.h  raft_log.cpp  raft_log.h  raft_membership.cpp  raft_membership.h  raft_message.h  raft_runtime.cpp  raft_runtime.h  raft_snapshot.cpp  raft_snapshot.h  raft_storage.h  raft_types.h
cross-platform-raft/src/rpc/: CMakeLists.txt  metadata_rpc_service.cpp  metadata_rpc_service.h  raft_rpc_service.cpp  raft_rpc_service.h  store_rpc_service.cpp  store_rpc_service.h
cross-platform-raft/src/server/: CMakeLists.txt  logging.cpp  logging.h  server.cpp  server.h  server_lifecycle.cpp  server_lifecycle.h  server_main.cpp
cross-platform-raft/src/store/: CMakeLists.txt  placement_policy.cpp  placement_policy.h  simple_task_dispatcher.cpp  simple_task_dispatcher.h  store_registry.cpp  store_registry.h  store_types.h  task_dispatcher.h  task_manager.cpp  task_manager.h  task_types.h
cross-platform-raft/src/transport/: CMakeLists.txt  grpc_raft_transport.cpp  grpc_raft_transport.h  raft_transport.cpp  raft_transport.h
cross-platform-raft/tests/: CMakeLists.txt  bounded_queue_test.cpp  checksum_test.cpp  client_tool_test.cpp  config_test.cpp  file_ops_test.cpp  fixture_loader.cpp  fixture_loader.h  fixture_loader_test.cpp  metadata_command_test.cpp  metadata_rpc_service_test.cpp  metadata_service_test.cpp  metadata_state_machine_test.cpp  placement_policy_test.cpp  raft_core_test.cpp  raft_log_test.cpp  raft_membership_add_learner_test.cpp  raft_membership_change_test.cpp  raft_membership_state_test.cpp  raft_membership_test.cpp  raft_membership_transition_test.cpp  raft_rpc_integration_test.cpp  raft_rpc_service_test.cpp  raft_runtime_test.cpp  raft_storage_test.cpp  raftctl_test.cpp  server_composition_test.cpp  server_lifecycle_test.cpp  simulated_cluster.cpp  simulated_cluster.h  simulated_cluster_test.cpp  state_machine_contract_test.cpp  state_machine_replacement_test.cpp  status_test.cpp  store_metadata_test.cpp  store_registry_test.cpp  store_rpc_service_test.cpp  task_dispatcher_test.cpp  task_manager_test.cpp  wal_dump_test.cpp
cross-platform-raft/tools/: CMakeLists.txt  tool_common.cpp  tool_common.h
cross-platform-raft/tools/client/: client_command.cpp  client_command.h  client_main.cpp
cross-platform-raft/tools/raftctl/: raftctl_command.cpp  raftctl_command.h  raftctl_main.cpp
cross-platform-raft/tools/wal_dump/: wal_dump_command.cpp  wal_dump_command.h  wal_dump_main.cpp
specs/001-cross-platform-raft/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cross-platform-raft/checklists/: requirements.md
specs/001-cross-platform-raft/contracts/: interfaces-and-services.md
specs/001-cross-platform-raft/report/: T001.md  T002.md  T003.md  T004.md  T005.md  T006.md  T007.md  T008.md  T009.md  T010.md  T011.md  T012.md  T013.md  T014.md  T015.md  T016.md  T017.md  T018.md  T019.md  T020.md  T021.md  T022.md  T023.md  T024.md  T025.md  T026.md  T027.md  T028.md  T029.md  T030.md  T031.md  T032.md  T033.md  T034.md  T035.md  T036.md  T037.md  T038.md  T039.md  T040.md  (+8 more)
